3400: Use geocoding for google api. (#1245)
3400: Use geocoding for google api. (#1245)

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -33,7 +33,7 @@ application:
   helpUrl: http://localhost:3000/
   systemEmailFirstName: SimplyHired
   systemEmailLastName: local
-  googleMapApiKey: #{The key for google map api}
+  googleGeoCodingApiKey: #{The key for google geocoding api}
 
 cloud:
   aws:
