3218: redirect all calls from compensation overtime status service (#1261)
* Redirect All Calls from CompensationOvertimeStatusService to OvertimeService

* Redirect All Calls from CompensationOvertimeStatusService to OvertimeService

--- a/src/main/resources/db/changelog/db.changelog-0.0.3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.3.yml
@@ -286,3 +286,11 @@ databaseChangeLog:
             onUpdate: CASCADE
             referencedColumnNames: id
             referencedTableName: static_timezones
+
+  - changeSet:
+      id: 1600932654000-1
+      author: michael-eb
+      changes:
+        - dropColumn:
+            columnName: overtime_status_id
+            tableName: user_compensations
