--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
       <artifactId>aws-java-sdk-s3</artifactId>
       <version>1.11.534</version>
     </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-dynamodb</artifactId>
+      <version>1.11.415</version>
+    </dependency>
 
     <dependency>
       <groupId>org.mapstruct</groupId>
